# SII2022_airsim_controller

./: CMakeLists.txt  README.md  package.xml
include/kawai_airsim_controller/: drone_random_pose.h  get_drone_image.h  get_inference_image.h  normal_distribution.h  original_image.h  random_pose_image.h
pysrc/: integrate_csv.py
setting_files/: drone_1cam.json
src/: drone_random_pose.cpp  get_drone_image.cpp  get_inference_image.cpp  normal_distribution.cpp  original_image.cpp  random_pose_image.cpp
